--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.3.30",
     "@hapi/joi": "^17.1.1",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
